examples/positive/L4/array_type.ob
MODULE ArrayType;

TYPE MYARRAY = ARRAY 2 OF INTEGER;

END ArrayType.
