examples/negative/parse_errors/L2/reserved_case.ob
MODULE Reserved;

VAR CASE: INTEGER;

END Reserved.
